[package]
name = "raftmodel"
version = "0.1.1"
authors = ["Peter Yang <yang.piyi@gmail.com>"]
edition = "2018"
repository = "https://github.com/jkabc123/ruraft"
description = "A logic model for the raft consensus algorithm"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
